Bug 501535 - Crash at startup
Summary: Crash at startup
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.03.80
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-15 14:06 UTC by Antonio Rojas
Modified: 2025-04-20 10:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2025-03-15 14:06:58 UTC
Falkon 25.04 beta crashes immediately at startup. It works fine with a new profile, but then of course I lose all my data and customization.

BookmarksTools::addUrlToMenu (receiver=receiver@entry=0x5555589f72a0, menu=menu@entry=0x5555589fa7c0, bookmark=0x5555589fbea0)                            
    at /usr/src/debug/falkon/falkon-25.03.80/src/lib/bookmarks/bookmarkstools.cpp:421
421         QObject::connect(act, &QAction::hovered, mApp->getWindow()->statusBar(), [=]() {
(gdb) bt
#0  BookmarksTools::addUrlToMenu (receiver=receiver@entry=0x5555589f72a0, menu=menu@entry=0x5555589fa7c0, bookmark=0x5555589fbea0)
    at /usr/src/debug/falkon/falkon-25.03.80/src/lib/bookmarks/bookmarkstools.cpp:421
#1  0x00007ffff7b95a33 in BookmarksTools::addActionToMenu (receiver=<optimized out>, menu=<optimized out>, item=<optimized out>)
    at /usr/src/debug/falkon/falkon-25.03.80/src/lib/bookmarks/bookmarkstools.cpp:370
#2  BookmarksTools::addFolderContentsToMenu (receiver=0x5555589f72a0, menu=0x5555589fa7c0, folder=<optimized out>)
    at /usr/src/debug/falkon/falkon-25.03.80/src/lib/bookmarks/bookmarkstools.cpp:446
#3  0x00007ffff7b8f7a5 in BookmarksToolbarButton::BookmarksToolbarButton (this=0x5555589f72a0, bookmark=0x5555589fbdd0, parent=0x555558993b50)
    at /usr/src/debug/falkon/falkon-25.03.80/src/lib/bookmarks/bookmarkstoolbarbutton.cpp:44
#4  BookmarksToolbar::addItem (this=0x555558993b50, item=0x5555589fbdd0)
    at /usr/src/debug/falkon/falkon-25.03.80/src/lib/bookmarks/bookmarkstoolbar.cpp:235
#5  0x00007ffff7b9103f in BookmarksToolbar::refresh (this=0x555558993b50)
    at /usr/src/debug/falkon/falkon-25.03.80/src/lib/bookmarks/bookmarkstoolbar.cpp:124
#6  0x00007ffff7b9164c in BookmarksToolbar::BookmarksToolbar (this=<optimized out>, window=<optimized out>, parent=<optimized out>, 
    this=<optimized out>, window=<optimized out>, parent=<optimized out>)
    at /usr/src/debug/falkon/falkon-25.03.80/src/lib/bookmarks/bookmarkstoolbar.cpp:65
#7  0x00007ffff7b4aa45 in BrowserWindow::setupUi (this=this@entry=0x5555588a4610)
    at /usr/src/debug/falkon/falkon-25.03.80/src/lib/app/browserwindow.cpp:373
#8  0x00007ffff7b4bc73 in BrowserWindow::BrowserWindow (this=<optimized out>, type=<optimized out>, startUrls=..., this=<optimized out>, 
    type=<optimized out>, startUrls=...) at /usr/src/debug/falkon/falkon-25.03.80/src/lib/app/browserwindow.cpp:206
#9  0x00007ffff7b5225d in MainApplication::createWindow (this=this@entry=0x7fffffffe040, type=type@entry=Qz::BW_FirstAppWindow, startUrls=...)
    at /usr/src/debug/falkon/falkon-25.03.80/src/lib/app/mainapplication.cpp:500
#10 0x00007ffff7b5411f in MainApplication::MainApplication (this=<optimized out>, argc=<optimized out>, argv=<optimized out>, this=<optimized out>, 
    argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/falkon/falkon-25.03.80/src/lib/app/mainapplication.cpp:350
#11 0x00005555555560ef in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/falkon/falkon-25.03.80/src/main/main.cpp:67
Comment 1 Antonio Rojas 2025-03-15 14:19:45 UTC
To reproduce with a clean profile:

- Add a folder to the bookmarks toolbar
- Add any bookmark inside that folder
- Restart falkon -> crash.
Comment 2 Juraj 2025-03-16 00:55:27 UTC
Can reproduce.
Thank you for reporting.
Comment 3 Bug Janitor Service 2025-03-16 02:00:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/127
Comment 4 Juraj 2025-03-16 02:02:46 UTC
Hello again,
I think I have a fix for it.
Will check tomorrow or later and backport it also for the upcoming release.
Thank you again for testing and reporting.
Comment 5 Juraj 2025-03-20 20:22:24 UTC
Git commit d145d932c48e080afdd99a0571acfcb2a861e40d by Juraj Oravec.
Committed on 20/03/2025 at 20:09.
Pushed by jurajo into branch 'master'.

Fix crash when loading folder in bookmarks toolbar

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +8    -0    src/lib/bookmarks/bookmarkstoolbarbutton.cpp
M  +1    -1    src/lib/bookmarks/bookmarkstools.cpp
M  +1    -1    src/lib/history/historymenu.cpp
M  +2    -2    src/lib/navigation/navigationbar.cpp

https://invent.kde.org/network/falkon/-/commit/d145d932c48e080afdd99a0571acfcb2a861e40d
Comment 6 Juraj 2025-03-20 20:25:58 UTC
Git commit 164475bf836ebf96874c227e0cd3c91aa33f4de7 by Juraj Oravec.
Committed on 20/03/2025 at 20:23.
Pushed by jurajo into branch 'release/25.04'.

Fix crash when loading folder in bookmarks toolbar

CherryPicked from: e6ee1e67bb6a6031fbafcb0dce53f5d30af377de

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +8    -0    src/lib/bookmarks/bookmarkstoolbarbutton.cpp
M  +1    -1    src/lib/bookmarks/bookmarkstools.cpp
M  +1    -1    src/lib/history/historymenu.cpp
M  +2    -2    src/lib/navigation/navigationbar.cpp

https://invent.kde.org/network/falkon/-/commit/164475bf836ebf96874c227e0cd3c91aa33f4de7
Comment 7 Kevin Kofler 2025-04-19 23:55:26 UTC
Looks like the fix just moves the crash elsewhere:
https://bugzilla.redhat.com/show_bug.cgi?id=2361191
Comment 8 Kevin Kofler 2025-04-20 01:28:10 UTC
Looks like addFolderToMenu needs the same kind of fix you made in addUrlToMenu, connecting to a lambda rather than directly to mApp->getWindow()->statusBar() that is not yet constructed at that point.
Comment 9 Kevin Kofler 2025-04-20 01:30:49 UTC
So something like:
-    QObject::connect(m, &QMenu::aboutToHide, mApp->getWindow()->statusBar(), &StatusBar::clearMessage);
+    QObject::connect(m, &QMenu::aboutToHide, [=]() {
+        mApp->getWindow()->statusBar()->clearMessage();
+    });
…
-    QObject::connect(act, &QAction::hovered, mApp->getWindow()->statusBar(), &StatusBar::clearMessage);
+    QObject::connect(act, &QAction::hovered, [=]() {
+        mApp->getWindow()->statusBar()->clearMessage();
+    });
Comment 10 Juraj 2025-04-20 10:55:12 UTC
Should be fixed in latest commits to master and release/25.04 branch.

PS: Made a mistake when writing down bug numbers.

Git commit dca93d08742f7c4ed66831ae1bea6078ffc7d716 by Juraj Oravec.
Committed on 20/04/2025 at 10:45.
Pushed by jurajo into branch 'release/25.04'.

Fix crash when creating bookmarks toolbar.

Cherry-picked from? 31ba9472369256804400a2db36b3dca3b4be2d73

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +9    -3    src/lib/bookmarks/bookmarkstools.cpp

https://invent.kde.org/network/falkon/-/commit/dca93d08742f7c4ed66831ae1bea6078ffc7d716