Fix crash when loading folder in bookmarks toolbar

BUG: 501535

CherryPicked from: e6ee1e67bb6a6031fbafcb0dce53f5d30af377de

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>